Update project files

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -112,7 +112,6 @@
   "authLoginRequiredToViewGallery": "يرجى تسجيل الدخول لعرض المعرض.",
   "authLoginRequiredToViewHistory": "يرجى تسجيل الدخول لعرض السجل.",
   "authLoginRequiredToSaveImages": "يرجى تسجيل الدخول لحفظ الصور.",
-  "authLoginRequiredToSaveWords": "يرجى تسجيل الدخول لحفظ الكلمات.",
   "authLoginRequiredToSaveHistory": "يرجى تسجيل الدخول لحفظ السجل.",
   "authGoToLogin": "اذهب إلى تسجيل الدخول",
   "aiNotConfigured": "الذكاء الاصطناعي غير مُهيأ. شغّل التطبيق باستخدام {args}",
@@ -153,12 +152,21 @@
   "cameraCamera": "الكاميرا",
   "cameraScanWithAi": "مسح النص بالذكاء الاصطناعي",
   "aboutApplication": "حول التطبيق",
-  "aboutDescription": "AskCam هو تطبيق Flutter للهواتف يتيح للمستخدمين التقاط أو تحميل الصور، واستخراج النص باستخدام ML Kit OCR، وترجمة النص المستخرج، وطرح أسئلة على الذكاء الاصطناعي لفهم المستندات والواجبات بشكل أفضل.",
-  "aboutMlKitServicesTitle": "خدمات ML Kit المستخدمة",
-  "aboutMlKitTextRecognition": "التعرّف على النص (OCR)",
-  "aboutMlKitTranslation": "الترجمة على الجهاز",
-  "aboutAiServiceTitle": "خدمة الذكاء الاصطناعي",
-  "aboutAiServiceGemini": "واجهة Gemini",
+  "aboutDescription": "يساعدك AskCam على التقاط أو تحميل الصور، واستخراج النص باستخدام التعرف على النص على الجهاز، وترجمته إلى لغات متعددة، وطرح أسئلة على الذكاء الاصطناعي لفهم المستندات والواجبات بشكل أفضل.",
+  "aboutMlKitServicesTitle": "ميزات ML Kit",
+  "aboutMlKitTextRecognition": "التعرف على النص (OCR)",
+  "aboutMlKitTextRecognitionDesc": "يستخدم ميزة التعرف على النص من ML Kit على الجهاز لاكتشاف واستخراج النص من الصور. يعمل بدون اتصال لنتائج فورية.",
+  "aboutMlKitTextRecognitionLink": "https://developers.google.com/ml-kit/vision/text-recognition",
+  "aboutMlKitTranslation": "الترجمة اللغوية",
+  "aboutMlKitTranslationDesc": "يستخدم ميزة الترجمة من ML Kit على الجهاز لترجمة النص المستخرج بين اللغات. سريع وخاص.",
+  "aboutMlKitTranslationLink": "https://developers.google.com/ml-kit/language/translation",
+  "aboutAiServiceTitle": "فهم الذكاء الاصطناعي",
+  "aboutAiServiceGemini": "Gemini للذكاء الاصطناعي",
+  "aboutAiServiceGeminiDesc": "يحلل Gemini النص المستخرج للإجابة على أسئلتك ومساعدتك على فهم المستندات. مدعوم من Google AI.",
+  "aboutAiServiceGeminiLink": "https://ai.google.dev/gemini-api",
+  "aboutPrivacyTitle": "الخصوصية والأمان",
+  "aboutPrivacyDesc": "تعمل ميزات ML Kit على جهازك حيث أمكن. تتم معالجة بياناتك بشكل آمن، ولا يتم تخزين أي معلومات حساسة بشكل غير ضروري.",
+  "aboutLearnMore": "معرفة المزيد",
   "aboutTargetUsersTitle": "الفئة المستهدفة",
   "aboutTargetUsersStudents": "الطلاب والمتعلمون",
   "galleryDeleteTitle": "حذف الصورة؟",
@@ -167,27 +175,16 @@
   "galleryTitle": "المعرض",
   "galleryLoadFailed": "تعذر تحميل المعرض.",
   "galleryEmpty": "لا توجد صور بعد.",
-  "savedWordsDeleteTitle": "حذف الكلمة المحفوظة؟",
-  "savedWordsDeleteMessage": "إزالة \"{word}\" من الكلمات المحفوظة؟",
-  "@savedWordsDeleteMessage": {
-    "placeholders": {
-      "word": {}
-    }
-  },
   "historyDeleteTitle": "حذف عنصر السجل؟",
   "historyDeleteMessage": "إزالة هذا الاستخراج من السجل؟",
   "historyTitle": "السجل",
-  "historyTab": "السجل",
-  "savedWordsTab": "الكلمات المحفوظة",
   "historyLoadFailed": "تعذر تحميل السجل.",
   "historyEmpty": "لا يوجد سجل بعد.",
   "historyNoExtractedText": "لا يوجد نص مستخرج",
   "historyNoText": "لا يوجد نص للحفظ بعد.",
   "historySaved": "تم الحفظ في السجل.",
   "historySaveFailed": "فشل الحفظ.",
-  "savedWordsSearchHint": "البحث في الكلمات المحفوظة",
-  "savedWordsLoadFailed": "تعذر تحميل الكلمات المحفوظة.",
-  "savedWordsEmpty": "لا توجد كلمات محفوظة بعد.",
+  "historySaveFailed": "فشل الحفظ.",
   "timeJustNow": "الآن",
   "notificationsEnabled": "الإشعارات مفعلة",
   "notificationsDisabled": "الإشعارات معطلة",
@@ -243,17 +240,7 @@
   "ocrRunning": "التعرف على النص يعمل...",
   "ocrEditHint": "عدّل النص المستخرج هنا.",
   "ocrEditInstruction": "عدّل النص إذا فات التعرف على شيء قبل الترجمة أو سؤال الذكاء الاصطناعي.",
-  "saveWordsNoText": "لا يوجد نص للحفظ بعد.",
-  "saveWordsSelectOrTypeError": "حدد كلمة/عبارة أولًا أو اكتب واحدة.",
-  "saveWordsLengthError": "يجب أن يكون طول الكلمة بين 2 و120 حرفًا.",
-  "saveWordsAlreadySaved": "تم حفظها بالفعل.",
-  "saveWordsSaved": "تم الحفظ.",
-  "saveWordsFailed": "فشل الحفظ، حاول مرة أخرى.",
-  "saveWordsTitle": "حفظ الكلمات",
-  "saveWordsInstruction": "حدد كلمة أو عبارة من النص أعلاه أو اكتب واحدة أدناه.",
-  "saveWordsHint": "اكتب كلمة أو عبارة للحفظ",
   "historySaveAction": "حفظ السجل",
-  "saveWordsAction": "حفظ الكلمات",
   "actionHome": "الرئيسية",
   "actionTranslate": "ترجمة",
   "actionAskAi": "اسأل الذكاء الاصطناعي",
