--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -112,7 +112,6 @@
   "authLoginRequiredToViewGallery": "Please login to view your gallery.",
   "authLoginRequiredToViewHistory": "Please login to view history.",
   "authLoginRequiredToSaveImages": "Please login to save images.",
-  "authLoginRequiredToSaveWords": "Please login to save words.",
   "authLoginRequiredToSaveHistory": "Please login to save history.",
   "authGoToLogin": "Go to Login",
   "aiNotConfigured": "AI is not configured. Please run the app with {args}",
@@ -153,12 +152,21 @@
   "cameraCamera": "Camera",
   "cameraScanWithAi": "Scan Text with AI",
   "aboutApplication": "About Application",
-  "aboutDescription": "AskCam is a Flutter mobile application that allows users to capture or upload images, extract text using ML Kit OCR, translate the extracted text, and ask AI questions to better understand documents and homework.",
-  "aboutMlKitServicesTitle": "ML Kit services used",
+  "aboutDescription": "AskCam helps you capture or upload images, extract text using on-device OCR, translate it into multiple languages, and ask AI questions to better understand documents and homework.",
+  "aboutMlKitServicesTitle": "ML Kit Features",
   "aboutMlKitTextRecognition": "Text Recognition (OCR)",
-  "aboutMlKitTranslation": "On-device Translation",
-  "aboutAiServiceTitle": "AI service",
-  "aboutAiServiceGemini": "Gemini API",
+  "aboutMlKitTextRecognitionDesc": "Uses ML Kit on-device text recognition to detect and extract text from images. Works offline for instant results.",
+  "aboutMlKitTextRecognitionLink": "https://developers.google.com/ml-kit/vision/text-recognition",
+  "aboutMlKitTranslation": "Language Translation",
+  "aboutMlKitTranslationDesc": "Uses ML Kit on-device translation to translate extracted text between languages. Fast and private.",
+  "aboutMlKitTranslationLink": "https://developers.google.com/ml-kit/language/translation",
+  "aboutAiServiceTitle": "AI Understanding",
+  "aboutAiServiceGemini": "Gemini AI",
+  "aboutAiServiceGeminiDesc": "Gemini analyzes extracted text to answer your questions and help you understand documents. Powered by Google AI.",
+  "aboutAiServiceGeminiLink": "https://ai.google.dev/gemini-api",
+  "aboutPrivacyTitle": "Privacy & Security",
+  "aboutPrivacyDesc": "ML Kit features run on your device where possible. Your data is processed securely, and no sensitive information is stored unnecessarily.",
+  "aboutLearnMore": "Learn more",
   "aboutTargetUsersTitle": "Target users",
   "aboutTargetUsersStudents": "Students and learners",
   "galleryDeleteTitle": "Delete image?",
@@ -167,27 +175,16 @@
   "galleryTitle": "Gallery",
   "galleryLoadFailed": "Unable to load gallery.",
   "galleryEmpty": "No images yet.",
-  "savedWordsDeleteTitle": "Delete saved word?",
-  "savedWordsDeleteMessage": "Remove \"{word}\" from your saved words?",
-  "@savedWordsDeleteMessage": {
-    "placeholders": {
-      "word": {}
-    }
-  },
   "historyDeleteTitle": "Delete history item?",
   "historyDeleteMessage": "Remove this extraction from history?",
   "historyTitle": "History",
-  "historyTab": "History",
-  "savedWordsTab": "Saved Words",
   "historyLoadFailed": "Unable to load history.",
   "historyEmpty": "No history yet.",
   "historyNoExtractedText": "No extracted text",
   "historyNoText": "No text to save yet.",
   "historySaved": "Saved to history.",
   "historySaveFailed": "Failed to save.",
-  "savedWordsSearchHint": "Search saved words",
-  "savedWordsLoadFailed": "Unable to load saved words.",
-  "savedWordsEmpty": "No saved words yet.",
+  "historySaveFailed": "Failed to save.",
   "timeJustNow": "Just now",
   "notificationsEnabled": "Notifications enabled",
   "notificationsDisabled": "Notifications disabled",
@@ -243,17 +240,7 @@
   "ocrRunning": "OCR is running...",
   "ocrEditHint": "Edit the extracted text here.",
   "ocrEditInstruction": "Edit the text if OCR missed anything before translating or asking AI.",
-  "saveWordsNoText": "No text to save yet.",
-  "saveWordsSelectOrTypeError": "Select a word/phrase first or type one.",
-  "saveWordsLengthError": "Word length must be between 2 and 120 characters.",
-  "saveWordsAlreadySaved": "Already saved.",
-  "saveWordsSaved": "Saved.",
-  "saveWordsFailed": "Failed to save, try again.",
-  "saveWordsTitle": "Save words",
-  "saveWordsInstruction": "Select a word or phrase in the text above, or type one below.",
-  "saveWordsHint": "Type a word or phrase to save",
   "historySaveAction": "Save history",
-  "saveWordsAction": "Save words",
   "actionHome": "Home",
   "actionTranslate": "Translate",
   "actionAskAi": "Ask AI",
