--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -112,7 +112,6 @@
   "authLoginRequiredToViewGallery": "Veuillez vous connecter pour voir votre galerie.",
   "authLoginRequiredToViewHistory": "Veuillez vous connecter pour voir l'historique.",
   "authLoginRequiredToSaveImages": "Veuillez vous connecter pour enregistrer les images.",
-  "authLoginRequiredToSaveWords": "Veuillez vous connecter pour enregistrer des mots.",
   "authLoginRequiredToSaveHistory": "Veuillez vous connecter pour enregistrer l'historique.",
   "authGoToLogin": "Aller a la connexion",
   "aiNotConfigured": "L'IA n'est pas configuree. Lancez l'application avec {args}",
@@ -153,12 +152,21 @@
   "cameraCamera": "Camera",
   "cameraScanWithAi": "Scanner le texte avec l'IA",
   "aboutApplication": "A propos de l'application",
-  "aboutDescription": "AskCam est une application mobile Flutter qui permet aux utilisateurs de capturer ou importer des images, d'extraire le texte avec l'OCR ML Kit, de traduire le texte extrait, et de poser des questions a l'IA pour mieux comprendre les documents et les devoirs.",
-  "aboutMlKitServicesTitle": "Services ML Kit utilises",
+  "aboutDescription": "AskCam vous aide a capturer ou importer des images, extraire le texte avec OCR sur l'appareil, le traduire en plusieurs langues et poser des questions a l'IA pour mieux comprendre vos documents et devoirs.",
+  "aboutMlKitServicesTitle": "Fonctionnalites ML Kit",
   "aboutMlKitTextRecognition": "Reconnaissance de texte (OCR)",
-  "aboutMlKitTranslation": "Traduction sur l'appareil",
-  "aboutAiServiceTitle": "Service IA",
-  "aboutAiServiceGemini": "API Gemini",
+  "aboutMlKitTextRecognitionDesc": "Utilise la reconnaissance de texte ML Kit sur l'appareil pour detecter et extraire le texte des images. Fonctionne hors ligne pour des resultats instantanes.",
+  "aboutMlKitTextRecognitionLink": "https://developers.google.com/ml-kit/vision/text-recognition",
+  "aboutMlKitTranslation": "Traduction linguistique",
+  "aboutMlKitTranslationDesc": "Utilise la traduction ML Kit sur l'appareil pour traduire le texte extrait entre langues. Rapide et confidentiel.",
+  "aboutMlKitTranslationLink": "https://developers.google.com/ml-kit/language/translation",
+  "aboutAiServiceTitle": "Comprehension IA",
+  "aboutAiServiceGemini": "Gemini IA",
+  "aboutAiServiceGeminiDesc": "Gemini analyse le texte extrait pour repondre a vos questions et vous aider a comprendre les documents. Propulse par Google AI.",
+  "aboutAiServiceGeminiLink": "https://ai.google.dev/gemini-api",
+  "aboutPrivacyTitle": "Confidentialite et securite",
+  "aboutPrivacyDesc": "Les fonctionnalites ML Kit s'executent sur votre appareil si possible. Vos donnees sont traitees en toute securite et aucune information sensible n'est stockee inutilement.",
+  "aboutLearnMore": "En savoir plus",
   "aboutTargetUsersTitle": "Utilisateurs cibles",
   "aboutTargetUsersStudents": "Etudiants et apprenants",
   "galleryDeleteTitle": "Supprimer l'image ?",
@@ -167,27 +175,16 @@
   "galleryTitle": "Galerie",
   "galleryLoadFailed": "Impossible de charger la galerie.",
   "galleryEmpty": "Aucune image pour le moment.",
-  "savedWordsDeleteTitle": "Supprimer le mot enregistre ?",
-  "savedWordsDeleteMessage": "Supprimer \"{word}\" de vos mots enregistres ?",
-  "@savedWordsDeleteMessage": {
-    "placeholders": {
-      "word": {}
-    }
-  },
   "historyDeleteTitle": "Supprimer l'element d'historique ?",
   "historyDeleteMessage": "Supprimer cette extraction de l'historique ?",
   "historyTitle": "Historique",
-  "historyTab": "Historique",
-  "savedWordsTab": "Mots enregistres",
   "historyLoadFailed": "Impossible de charger l'historique.",
   "historyEmpty": "Aucun historique pour le moment.",
   "historyNoExtractedText": "Aucun texte extrait",
   "historyNoText": "Aucun texte a enregistrer.",
   "historySaved": "Enregistre dans l'historique.",
   "historySaveFailed": "Echec de l'enregistrement.",
-  "savedWordsSearchHint": "Rechercher des mots enregistres",
-  "savedWordsLoadFailed": "Impossible de charger les mots enregistres.",
-  "savedWordsEmpty": "Aucun mot enregistre pour le moment.",
+  "historySaveFailed": "Echec de l'enregistrement.",
   "timeJustNow": "A l'instant",
   "notificationsEnabled": "Notifications activees",
   "notificationsDisabled": "Notifications desactivees",
@@ -243,17 +240,7 @@
   "ocrRunning": "OCR en cours...",
   "ocrEditHint": "Modifiez le texte extrait ici.",
   "ocrEditInstruction": "Modifiez le texte si l'OCR a manque quelque chose avant de traduire ou demander a l'IA.",
-  "saveWordsNoText": "Aucun texte a enregistrer.",
-  "saveWordsSelectOrTypeError": "Selectionnez un mot/une phrase ou saisissez-en un.",
-  "saveWordsLengthError": "La longueur doit etre entre 2 et 120 caracteres.",
-  "saveWordsAlreadySaved": "Deja enregistre.",
-  "saveWordsSaved": "Enregistre.",
-  "saveWordsFailed": "Echec de l'enregistrement, reessayez.",
-  "saveWordsTitle": "Enregistrer des mots",
-  "saveWordsInstruction": "Selectionnez un mot ou une phrase dans le texte ci-dessus, ou saisissez-en un ci-dessous.",
-  "saveWordsHint": "Saisissez un mot ou une phrase a enregistrer",
   "historySaveAction": "Enregistrer l'historique",
-  "saveWordsAction": "Enregistrer des mots",
   "actionHome": "Accueil",
   "actionTranslate": "Traduire",
   "actionAskAi": "Demander a l'IA",
